# modular-agent-slack

./: Cargo.toml  README.md  README_ja.md
.claude/: settings.local.json
src/: agents.rs  lib.rs  mrkdwn.rs
