[package]
name = "modular-agent-slack"
version = "0.3.1"
description = "Slack Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
chrono = "0.4"
im = "15.1.0"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "2", features = ["hyper"] }
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true}

modular-agent-core = "0.23.1"

[features]
default = ["image"]
image = ["modular-agent-core/image", "reqwest"]

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
